--- a/news.html
+++ b/news.html
@@ -31,7 +31,12 @@
         
 <br>
 <br>
-<img src="images/lipstick3.jpg" style="width: 600px;">
+<div>
+<img src="images/lipstick3.jpg" style="width: 450px;">
+  style="float: right;">
+      <h3 style="color: #f8a9de;">what we sell</h3>
+      <p></p>
+</div>
 
     </body>
 </html>
