--- a/services.html
+++ b/services.html
@@ -26,19 +26,18 @@
 <p>Berry Kissed Lipstick Application & Custom Matching  R25
 Find your perfect lip shade and enjoy a professional lipstick application for a flawless finish.</p>
 
- <p>Berry Blushed Blush & Glow Application  R30
-Enhance your cheeks with the perfect pop of color using our Berry Life Beauty blush collection.</p>
+<p>Berry Blushed Blush & Glow Application  R30</p>>
+<P>Enhance your cheeks with the perfect pop of color using our Berry Life Beauty blush collection.</p>
 <p>Berry Glam  Full Face with Berry Life Product R80</p>
-<p>  Acomplete makeup look using only Berry Life Beauty eyeshadows, lipsticks, and blushes.</p>
+<p>Acomplete makeup look using only Berry Life Beauty eyeshadows, lipsticks, and blushes.</p>
 <p>Exclusive Brand Experiences 
 Berry Beauty Masterclass R100 per person</p>
 <p>Learn pro techniques to apply eyeshadow, lipstick, and blush like a makeup artist.</p>
- <p>Berry Life Custom Makeup Consultation  R50</p>
 <p>Personalized shade matching and product recommendations tailored to your skin tone and style.</p>
-<p>Shop & Book Your Berry Life Beauty Experience Today! 💋</p>
-<p>📍 Available in-studio, pop-up events, and virtual sessions.</p>
+<p>Shop & Book Your Berry Life Beauty Experience Today! </p>
+<p>Available in-studio, pop-up events, and virtual sessions.</p>
 <p> DM or visit our website to schedule!</p>
 
         <br>
-        <img src="images/lipstick2.jpg" style="width: 350px; height: 350px;">
+        <img src="images/lipstick2.jpg" style="width: 450px;">
 </html>
